<resources>
    <string name="app_name">MarketPlaceMerch</string>
    <string name="product_name">Product Name</string>
    <string name="product_nm">product name</string>
    <string name="product_price">Product Price</string>
    <string name="prc_num">Ex : Rp. 100000</string>
    <string name="product_desc">Product Description</string>
    <string name="desc">Description</string>
    <string name="product_qty">Product Quantity</string>
    <string name="qty">Ex : 10</string>
    <string name="product_cat">Product Category</string>
    <string name="product_img">Product Image</string>
    <string name="choose_img">Choose Image</string>
    <string name="add_prod">Add Product</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="confirm">Confirm Password</string>
    <string name="merch">Want to be a merchant?</string>
    <string name="merch_name">Merchant Name</string>
    <string name="already">Already have an account? </string>
    <string name="log_in">Log In</string>
    <string name="reg">Register</string>
    <string name="exmail">haha@hihi.com</string>
    <string name="exPass">123456789</string>
</resources>
